# DroneMapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  HLD-2.html  HLD.html  README.md  convert_map.py  readme.txt  vcpkg.json
data_maps/: office_small.npy
include/: ConfigParser.hpp  Drone.hpp  Interfaces.hpp  LidarMock.hpp  MovementDriverMock.hpp  PositionSensorMock.hpp  Simulator.hpp  SparseBuildingMap.hpp  Types.hpp
include/drone_mapper/: ConfigParser.h  DroneControlImpl.h  ErrorLogger.h  IDroneControl.h  IDroneMovement.h  IGPS.h  ILidar.h  IMap3D.h  IMappingAlgorithm.h  IMissionControl.h  IMutableMap3D.h  ISimulation.h  ISimulationRun.h  ISimulationRunFactory.h  Map3DImpl.h  MappingAlgorithmImpl.h  MapsComparison.h  MissionControlImpl.h  MockGPS.h  MockLidar.h  MockMovement.h  ScanResultToVoxels.h  SimulationManager.h  SimulationRunImpl.h  Types.h  Units.h
include/drone_mapper/types/: DroneTypes.h  LidarTypes.h  MapTypes.h  MissionTypes.h  SimulationTypes.h
inputs/: sim_compose.yaml
inputs/drone/: drone_large.yaml  drone_small.yaml
inputs/lidar/: lidar_long.yaml  lidar_short.yaml
inputs/mission/: house_mission_full.yaml  house_mission_lower.yaml  large_mission_out.yaml  large_mission_room.yaml  small_mission_out.yaml  small_mission_room.yaml
inputs/simulation/: large_simulation_out.yaml  small_simulation_out.yaml  small_simulation_room.yaml
sample/: input_errors.txt
sample1/: drone.yaml  drone_config.txt  lidar.yaml  map_input.txt  mission.yaml  mission_config.txt  mission_config.yaml  simulation.yaml
sample2/: drone_config.txt  drone_config.yaml  lidar.yaml  map_input.txt  mission.yaml  mission_config.txt  mission_config.yaml  sim_compose.yaml  simulation.yaml
sample3/: drone.yaml  drone_config.txt  drone_config.yaml  map_input.txt  mission.yaml  mission_config.txt  mission_config.yaml  simulation.yaml
sample_config/: comparison_config.yaml  simulation_compositions.yaml
sample_config/drone_configs/: drone_large.yaml
sample_config/lidar_configs/: lidar_a.yaml  lidar_b.yaml
sample_config/missions/: mission_a.yaml
sample_config/simulations/: sim1.yaml
src/: ConfigParser.cpp  Drone.cpp  DroneControlImpl.cpp  ErrorLogger.cpp  LidarMock.cpp  Map3DImpl.cpp  MappingAlgorithmImpl.cpp  MapsComparison.cpp  MissionControlImpl.cpp  MockGPS.cpp  MockLidar.cpp  MockMovement.cpp  MovementDriverMock.cpp  PositionSensorMock.cpp  ScanResultToVoxels.cpp  SimulationManager.cpp  SimulationRunFactory.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp  Simulator.cpp  SparseBuildingMap.cpp  drone_mapper_simulation_main.cpp  main.cpp  maps_comparison_main.cpp
tests/: CMakeLists.txt  bonus.txt  test_boundaries.cpp  test_config_parser.cpp  test_dense_map.cpp  test_drone.cpp  test_helpers.hpp  test_mocks.cpp  test_simulator.cpp  test_sparse_map.cpp
tests/components/: test_drone_control.cpp  test_mapping_algorithm.cpp  test_maps_comparison.cpp  test_mission_control.cpp  test_mock_lidar.cpp  test_simulation_manager.cpp  test_simulation_run.cpp
tests/integration/: test_integration_mock_algorithm.cpp  test_integration_real_algorithm.cpp
